--- a/gallery.html
+++ b/gallery.html
@@ -15,7 +15,64 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+SC&display=swap" rel="stylesheet">
+    <style>
+        .lightbox {
+            display: none;
+            position: fixed;
+            z-index: 1000;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.8);
+            top: 0;
+            left: 0;
+            text-align: center;
+        }
 
+        .lightbox img {
+            max-width: 80%;
+            max-height: 80%;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+
+        .lightbox-close {
+            color: #fff;
+            position: absolute;
+            top: 10px;
+            right: 20px;
+            font-size: 100px;
+            cursor: pointer;
+        }
+
+        .post-it {
+            background-color: #fffb88;
+            padding: 20px;
+            margin: 30px;
+            border: 1px solid #d4d4a1;
+            box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.2);
+        }
+
+        .post-it.locations ul {
+            columns: 2;
+            -webkit-columns: 2;
+            -moz-columns: 2;
+        }
+
+        .post-it h3 {
+            text-decoration: underline;
+        }
+
+        .post-it ul {
+            list-style: none;
+            padding-left: 0;
+        }
+
+        .post-it ul li {
+            margin-bottom: 5px;
+        }
+    </style>
 </head>
 
 <body>
@@ -49,7 +106,7 @@
                         <a class="nav-link text-white" href="music.html">Music</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="gallery.html">Gallery</a>
+                        <a class="nav-link text-white" href="gallery.html">What We Do</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="testimonials.html">Testimonials</a>
@@ -62,81 +119,65 @@
         </nav>
     </header>
 
-    <section>
-        <div id="galleryCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="false">
-            <div class="carousel-inner">
-                <div class="carousel-item">
-                    <img src="assets/gallery_images/image_1.JPEG" class="d-block w-100" alt="Image 1">
-                </div>
-                <div class="carousel-item active">
-                    <img src="assets/gallery_images/image_2.JPEG" class="d-block w-100" alt="Image 2">
-                </div>
-                <div class="carousel-item">
-                    <img src="assets/gallery_images/image_3.JPEG" class="d-block w-100" alt="Image 3">
-                </div>
-                <div class="carousel-item">
-                    <img src="assets/gallery_images/image_4.JPEG" class="d-block w-100" alt="Image 4">
-                </div>
-                <div class="carousel-item">
-                    <img src="assets/gallery_images/image_5.JPEG" class="d-block w-100" alt="Image 5">
-                </div>
-                <div class="carousel-item">
-                    <img src="assets/gallery_images/image_6.JPEG" class="d-block w-100" alt="Image 6">
-                </div>
-                <div class="carousel-item">
-                    <img src="assets/gallery_images/image_7.JPEG" class="d-block w-100" alt="Image 7">
-                </div>
-                <div class="carousel-item">
-                    <img src="assets/gallery_images/image_8.JPEG" class="d-block w-100" alt="Image 8">
-                </div>
-                <div class="carousel-item">
-                    <img src="assets/gallery_images/image_9.JPEG" class="d-block w-100" alt="Image 9">
-                </div>
-                <div class="carousel-item">
-                    <img src="assets/gallery_images/image_10.JPEG" class="d-block w-100" alt="Image 10">
-                </div>
-                <div class="carousel-item">
-                    <img src="assets/gallery_images/image_11.JPEG" class="d-block w-100" alt="Image 11">
-                </div>
-                <div class="carousel-item">
-                    <img src="assets/gallery_images/image_12.JPEG" class="d-block w-100" alt="Image 12">
-                </div>
-                <div class="carousel-item">
-                    <img src="assets/gallery_images/image_13.JPEG" class="d-block w-100" alt="Image 13">
-                </div>
-                <div class="carousel-item">
-                    <img src="assets/gallery_images/image_14.JPEG" class="d-block w-100" alt="Image 14">
-                </div>
-                <div class="carousel-item">
-                    <img src="assets/gallery_images/image_15.JPEG" class="d-block w-100" alt="Image 15">
-                </div>
-                <div class="carousel-item">
-                    <img src="assets/gallery_images/image_16.JPEG" class="d-block w-100" alt="Image 16">
-                </div>
-                <div class="carousel-item">
-                    <img src="assets/gallery_images/image_17.JPEG" class="d-block w-100" alt="Image 17">
-                </div>
-                <div class="carousel-item">
-                    <img src="assets/gallery_images/image_18.JPEG" class="d-block w-100" alt="Image 18">
-                </div>
-                <div class="carousel-item">
-                    <img src="assets/gallery_images/image_19.JPEG" class="d-block w-100" alt="Image 19">
-                </div>
-                <div class="carousel-item">
-                    <img src="assets/gallery_images/image_20.JPEG" class="d-block w-100" alt="Image 20">
-                </div>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-3 text-center post-it locations">
+                <h3>You may have seen us before!</h3>
+                <ul>
+                    <li>El barrio</li>
+                    <li>Odettes</li>
+                    <li>Sweeney’s</li>
+                    <li>Newtown Brewing Company</li>
+                    <li>Artifact Brewing</li>
+                    <li>McGillicuddy’s</li>
+                    <li>Cafe Michaelangelo</li>
+                    <li>Bitchin’ Kitten</li>
+                    <li>Newtown Athletic Club- Club Escape</li>
+                    <li>Triple Sun Spirits</li>
+                    <li>Green Parrot</li>
+                    <li>Vault Smokehouse</li>
+                    <li>Roberts Block</li>
+                    <li>Maggie’s Waterfront Cafe</li>
+                    <li>Ashlynn Distillery</li>
+                    <li>Revere Restaurant</li>
+                    <li>Odd Logic Brewing Company</li>
+                    <li>Broken Goblet Brewing</li>
+                    <li>Moss Mill Brewing</li>
+                    <li>Tony’s Place</li>
+                    <li>Mike’s Bar and Grill</li>
+                    <li>Devils Acre</li>
+                    <li>Riverhorse Brewing</li>
+                    <li>Paddy Whacks - South Street</li>
+                    <li>Hewn Spirits</li>
+                    <li>Vince’s Pizza</li>
+                    <li>Naked Brewing</li>
+                    <li>Warwick Brewing</li>
+                    <li>Hops Scotch</li>
+                    <li>Delorenzos</li>
+                    <li>Plumsteadville Inn</li>
+                    <li>Philly Pharmacy</li>
+                    <li>Local Tap</li>
+                    <li>Great Barn Tap</li>
+                    <li>Irish Rover</li>
+                    <li>John & Peters</li>
+                    <li>Stone & Keys</li>
+                </ul>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#galleryCarousel" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#galleryCarousel" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+            <div class="col-md-3 text-center post-it">
+                <h3>We play at all kinds of events!</h3>
+                <ul>
+                    <li>Weddings</li>
+                    <li>Corporate Events</li>
+                    <li>Birthdays</li>
+                    <li>Festivals</li>
+                    <li>Private Parties</li>
+                    <li>Local Shows</li>
+                    <!-- Add other event types here -->
+                </ul>
+            </div>
         </div>
+    </div>
 
-    </section>
     <section class="container" id="thumbnailGrid">
         <!-- JavaScript will append the thumbnail grid here -->
     </section>
@@ -157,15 +198,17 @@
 
     <script>
         document.addEventListener("DOMContentLoaded", function () {
-            var carouselItems = document.querySelectorAll('#galleryCarousel .carousel-item img');
             var gridContainer = document.getElementById('thumbnailGrid');
             var galleryCarousel = new bootstrap.Carousel(document.getElementById('galleryCarousel'), {
                 interval: false
             });
 
+            // Specify the number of images or dynamically fetch from your server
+            var numberOfImages = 9;
+
             var row = null;
 
-            carouselItems.forEach(function (image, index) {
+            for (var index = 0; index < numberOfImages; index++) {
                 if (index % 3 === 0) {
                     row = document.createElement('div');
                     row.className = 'row';
@@ -175,24 +218,34 @@
                 var col = document.createElement('div');
                 col.className = 'col-4';
                 var thumbnail = document.createElement('img');
-                thumbnail.src = image.src;
-                thumbnail.alt = image.alt;
+
+                // Make sure to name your images in a way you can iterate through them like image1.jpg, image2.jpg, etc.
+                thumbnail.src = "assets/gallery_images/image_" + (index + 1) + ".jpeg";
+                thumbnail.alt = "Image " + (index + 1);
                 col.appendChild(thumbnail);
 
-                col.onclick = function () {
-                    galleryCarousel.to(index);
+                col.onclick = function (event) {
+                    openLightbox(event.target.src);
                 };
 
                 row.appendChild(col);
-            });
+            }
         });
 
-
-        function goToSlide(slideNumber) {
-            var galleryCarousel = new bootstrap.Carousel(document.getElementById('galleryCarousel'));
-            galleryCarousel.to(slideNumber);
+        function openLightbox(src) {
+            document.getElementById('lightbox-img').src = src;
+            document.getElementById('lightbox').style.display = 'block';
         }
+
+        function closeLightbox() {
+            document.getElementById('lightbox').style.display = 'none';
+        }
+
     </script>
+    <div id="lightbox" class="lightbox">
+        <span class="lightbox-close" onclick="closeLightbox()">&times;</span>
+        <img id="lightbox-img" src="" alt="Enlarged Image">
+    </div>
 </body>
 
 </html>
