contact page changes

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+SC&display=swap" rel="stylesheet">
-
+    <style>
+        div a {
+            text-decoration: none;
+        }
+    </style>
 </head>
 
 <body>
@@ -62,8 +66,17 @@
         </nav>
     </header>
     <section id="contact">
-        <h2>Contact Us</h2>
-        <p>Email us at: <a href="mailto:jtroth17@comcast.net">jtroth17@comcast.net</a></p>
+        <div>
+            <h2>Contact Us</h2>
+            <p>Email us at: <a href="mailto:jtroth17@comcast.net">jtroth17@comcast.net</a></p>
+            <p>Send us a message on Instagram or Facebook!</p>
+            <a href="https://www.facebook.com/profile.php?id=100077331999051" target="_blank" rel="noopener noreferrer">
+                <i class="fab fa-facebook"></i>
+            </a>
+            <a href="https://www.instagram.com/thejduomusic" target="_blank" rel="noopener noreferrer">
+                <i class="fab fa-instagram"></i>
+            </a>
+        </div>
     </section>
     <footer>
         <p>&copy; 2023 The J Duo</p>
