--- a/gallery.html
+++ b/gallery.html
@@ -229,7 +229,7 @@
 
                 // Make sure to name your images in a way you can iterate through them like image1.jpg, image2.jpg, etc.
                 thumbnail.src = "assets/gallery_images/image_" + (index + 1) + ".jpeg";
-                thumbnail.alt = "Image " + (index + 1);
+                thumbnail.alt = "image " + (index + 1);
                 col.appendChild(thumbnail);
 
                 col.onclick = function (event) {
