--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <a class="nav-link text-white" href="music.html">Music</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="gallery.html">What We Do</a>
+            <a class="nav-link text-white" href="whatwedo.html">What We Do</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-white" href="testimonials.html">Testimonials</a>
