--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
         <h3>We are The J Duo, a Local Duo in Bucks/Montco, PA</h3>
         <div class="container">
             <!-- Jake Dillon's section -->
-            <div class="row">
+            <div class="row slide-in-row">
                 <div class="col-lg-6"><img src="assets/jake-dillon-image.jpg" alt="Jake Dillon"
                         class="img-fluid band-member-image"></div>
                 <div class="col-lg-6">
@@ -107,7 +107,7 @@
             </div>
 
             <!-- Jordan Roth's section -->
-            <div class="row flex-lg-row-reverse">
+            <div class="row flex-lg-row-reverse slide-in-row">
                 <div class="col-lg-6"><img src="assets/jordan-roth-image.jpg" alt="Jordan Roth"
                         class="img-fluid band-member-image"></div>
                 <div class="col-lg-6">
@@ -145,7 +145,7 @@
             </div>
 
             <!-- Brianna's section -->
-            <div class="row">
+            <div class="row slide-in-row">
                 <div class="col-lg-6"><img src="assets/brianna.jpg" alt="Brianna" class="img-fluid band-member-image">
                 </div>
                 <div class="col-lg-6">
@@ -199,6 +199,34 @@
             </a>
         </p>
     </footer>
+    <script>
+        // Function to check if an element is in the viewport
+        function isInViewport(element) {
+            const rect = element.getBoundingClientRect();
+            return (
+                rect.top <= window.innerHeight &&
+                rect.bottom >= 0
+            );
+        }
+
+        // Function to handle the slide-in effect
+        function handleScroll() {
+            document.querySelectorAll('.slide-in-row').forEach(row => {
+                if (isInViewport(row)) {
+                    row.classList.add('visible');
+                } else {
+                    row.classList.remove('visible');
+                }
+            });
+        }
+
+        // Listen for scroll events
+        window.addEventListener('scroll', handleScroll);
+
+        // Run once on load in case elements are already in the viewport
+        handleScroll();
+    </script>
+
 
 </body>
 
